# py-app-devOps-c1-cd

./: .gitignore  Dockerfile  README.md  catalog-info.yaml  main.py  mkdocs.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yaml
app/: config.py  main.py  routes.py
docs/: index.md
fastapi-chart/: Chart.yaml  values.yaml
fastapi-chart/argo-cd/: application.yaml  values-argocd.yaml
fastapi-chart/templates/: deployment.yaml  service.yaml
k8/: ingress.yaml  service.yaml
k8s/: deployment.yaml  ingress.yaml  runnersfile.txt
scripts/: dev_ingress.sh
